UtahLiveDataTest/src/objects/PaymentServiceArea__c.object
<CustomObject>
    <description>[Business]  Defines the mapping of the Payment with the targeted service area</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountDue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BurnRate__c</fullName>
        <formula>IF( (YTDAdvance__c &lt;&gt; 0 &amp;&amp; YeartoDateSpent__c &lt; YTDAdvance__c), TEXT(Round((( YeartoDateSpent__c)/ YTDAdvance__c )*100,2))&amp;&quot;%&quot; ,&quot;Not Applicable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Expense/Advance Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantProjectArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Project Area</label>
        <referenceTo>GrantServiceArea__c</referenceTo>
        <relationshipLabel>Payment Project Areas</relationshipLabel>
        <relationshipName>Payment_Project_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideAdvanceExternal__c</fullName>
        <formula>IF( ISPICKVAL( PaymentRequest__r.Type__c ,&apos;Reimbursement&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAdvanceExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAdvanceInternal__c</fullName>
        <formula>IF( ISPICKVAL( PaymentRequest__r.Type__c ,&apos;Reimbursement&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAdvanceInternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditApplicantAdvance__c</fullName>
        <formula>IF(TEXT(PaymentRequest__r.Status__c )= &apos;In Progress&apos;, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditApplicantAdvance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDOHAdvance__c</fullName>
        <formula>IF(( (TEXT(PaymentRequest__r.Status__c )= &apos;Submitted&apos; || TEXT(PaymentRequest__r.Status__c )= &apos;Rejected by Project Officer&apos; || TEXT(PaymentRequest__r.Status__c )= &apos;Rejected by Program Manager&apos; )&amp;&amp;  PaymentRequest__r.GrantMonitor__r.Id ==  $User.Id ) ||
(TEXT(PaymentRequest__r.Status__c )= &apos;Approved By Project Officer&apos; &amp;&amp;   PaymentRequest__r.ProgramManager__r.Id  ==  $User.Id )
, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDOHAdvance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideExpenseExternal__c</fullName>
        <formula>IF( ISPICKVAL( PaymentRequest__r.Type__c ,&apos;Advance&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideExpenseExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideExpenseInternal__c</fullName>
        <formula>IF( ISPICKVAL( PaymentRequest__r.Type__c ,&apos;Advance&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideExpenseInternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InDirectAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InDirect Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipName>Payment_Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Payment Project Areas</relationshipLabel>
        <relationshipName>Payment_Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalApprovedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAwardedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Awarded Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YeartoDateSpent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Project Area</label>
    <nameField>
        <displayFormat>PASA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Project Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>